--- a/app/assets/stylesheets/user.css
+++ b/app/assets/stylesheets/user.css
@@ -17,7 +17,8 @@
 
 #user_profile{
 	width: 100%;
-	height: 100%;
+	height: auto;
+
 	
 	margin-top: 50px;
     margin-right: 0px;
@@ -35,6 +36,10 @@
     font-weight: normal;
     font-size: 14px;
     color: #293a49;
+}
+
+.footer_user{
+
 }
 
 
@@ -114,6 +119,9 @@
 
 
 /*features profile */
+
+
+
 
 .profile-info .panel-footer {
     background-color:#f8f7f5 ;
