--- a/app/views/layouts/userslayouts.html.erb
+++ b/app/views/layouts/userslayouts.html.erb
@@ -35,27 +35,27 @@
 
       <aside class="profile-nav col-lg-3">
         <section class="panel">
-          <div class="user-heading round">
-            <a href="#"><%= image_tag @user.avatar.url(:medium),:width => "70%"%></a>
-            <h1><%= @user.name %></h1>
-            <p>
-              <%= @user.email %>
-            </p>
-          </div>
-          <ul class="nav nav-pills nav-stacked">
-            <li class="active">
-              <%= link_to "Perfil".html_safe , user_path(current_user.id), :class => "fa fa-user" %>
-            </li>
-            <% if (current_user && @user.id == current_user.id) %>
-              <li>
-                <%= link_to "Editar Perfil".html_safe , edit_user_registration_path(), :class => "fa fa-edit" %>
-              </li>
-            <% end %>
-            <li> 
-              <span class="label  pull-right r-activity counter_ads"><%= @user.counter_ads %></span>
-              <%= link_to " Os Meus Anúncios".html_safe , myads_user_path(current_user.id), :class => "fa fa-calendar" %> 
-            </li>
-          </ul>
+                  <div class="user-heading round">
+                        <a href="#"><%= image_tag @user.avatar.url(:medium),:width => "70%"%></a>
+                        <h1><%= @user.name %></h1>
+                        <p>
+                          <%= @user.email %>
+                        </p>
+                  </div>
+                  <ul class="nav nav-pills nav-stacked">
+                          <li class="">
+                            <%= link_to "Perfil".html_safe , user_path(current_user.id), :class => "fa fa-user" %>
+                          </li>
+                          <% if (current_user && @user.id == current_user.id) %>
+                            <li>
+                              <%= link_to "Editar Perfil".html_safe , edit_user_registration_path(), :class => "fa fa-edit" %>
+                            </li>
+                          <% end %>
+                          <li> 
+                            <span class="label  pull-right r-activity counter_ads"><%= @user.counter_ads %></span>
+                            <%= link_to " Os Meus Anúncios".html_safe , myads_user_path(current_user.id), :class => "fa fa-calendar" %> 
+                          </li>
+                  </ul>
         </section>
         
         <% if (current_user && @user.id != current_user.id) %>
@@ -63,19 +63,33 @@
             <button class="followToggle btn btn-primary" value="<%= @user.id %>"><% if current_user.is_following(@user) %>unfollow<% else %>follow<% end %></button>
     
         <% end %>
-      </aside>
+      
+
+    
+
+    </aside>
 
     <%= yield %>
+    
 
     </div>
 
 
-  </div>
 
-  <%= render 'layouts/footer' %>
+</div>
+
+<div class="footer">
+
+     <%= render 'layouts/footer' %>
 
 
+</div>
 
 
 </body>
+
+
+
+
+
 </html>
