--- a/app/views/ads/edit.html.erb
+++ b/app/views/ads/edit.html.erb
@@ -1,6 +1,6 @@
 <ol class="breadcrumb" id="breadcrumbAds"  style="border: 1px solid #dddddd;">
   <li class="active">
-    <i class="fa fa-tags"></i> <a class="url" href="<%= ads_path %>">Anúncios</a> >
+    <i class="fa fa-shopping-cart"></i> <a class="url" href="<%= ads_path %>">Anúncios</a> >
     <a class="url" href="<%= ad_path(@ad.id) %>"> <%= @ad.title %></a>
   </li>
   <% if user_signed_in? %>
