--- a/app/views/ads/new.html.erb
+++ b/app/views/ads/new.html.erb
@@ -1,7 +1,7 @@
 <div>
   <ol class="breadcrumb" id="breadcrumbAds" style="border: 1px solid #dddddd;">
     <li class="active">
-      <i class="fa fa-tags"></i> <a class="url" href="<%= ads_path %>">Anúncios</a>
+      <i class="fa fa-shopping-cart"></i> <a class="url" href="<%= ads_path %>">Anúncios</a>
     </li>
     <% if user_signed_in? %>
       <a class="url" href="<%= myads_user_path(current_user.id) %>"> > Os meus Anúncios</a> >
