--- a/app/views/layouts/_sidebar_left.html.erb
+++ b/app/views/layouts/_sidebar_left.html.erb
@@ -6,7 +6,7 @@
     <div class="panel-heading" style="background-color: #39b3d7">
       <h4 class="panel-title">
         <a data-toggle="collapse" data-parent="#accordion" href="#collapseMercado">
-          <%= fa_icon "tags", class:"market-icon" %> MERCADO
+          <%= fa_icon "shopping-cart", class:"market-icon" %> MERCADO
         </a>
       </h4>
     </div>
