--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -12,7 +12,7 @@
 
   <link href='http://fonts.googleapis.com/css?family=Ubuntu|Raleway' rel='stylesheet' type='text/css'>
 
-  <body class=""> 
+  <body class="">
     <div id="wrapper">
       <!-- Sidebar -->
       <nav class="navbar navbar-inverse navbar-fixed-top admin-navbar" role="navigation">
@@ -25,60 +25,60 @@
             <span class="icon-bar"></span>
           </button>
           <%= link_to "AgroSocial-<small>Administração</small>".html_safe, admin_dashboard_index_path ,:class=>"navbar-brand"%>
-          
+
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse navbar-ex1-collapse">
           <ul class="nav navbar-nav side-nav sidebar_nav_admin">
 
-            <li> 
+            <li>
              <%= link_to "<i class='fa fa-shopping-cart fa-1.2x'></i> Anúncios".html_safe  , admin_ads_path %>
            </li>
 
-           <li> 
-             <%= link_to "<i class='fa fa-tags'></i> Categorias".html_safe  , admin_categories_path %>
+           <li>
+             <%= link_to "<i class='fa fa-shopping-cart'></i> Categorias".html_safe  , admin_categories_path %>
            </li>
 
-           <li> 
+           <li>
              <%= link_to "<i class='fa fa-dot-circle-o'></i> Cidades".html_safe  , admin_cities_path %>
            </li>
 
 
 
 
-         <li> 
+         <li>
            <%= link_to "<i class='fa fa-calendar'></i> Eventos".html_safe  , admin_event_events_path %>
          </li>
 
-          <li> 
+          <li>
            <%= link_to "<i class='fa fa-suitcase'></i> Pacotes".html_safe  , admin_plans_path %>
          </li>
 
-          <li> 
+          <li>
            <%= link_to "<i class='fa fa-question-circle'></i> Perguntas".html_safe  , admin_academy_questions_path %>
          </li>
 
 
-         <li> 
+         <li>
            <%= link_to "<i class='fa fa-qrcode'></i> Publicidade".html_safe  , admin_publicities_path %>
          </li>
 
-           <li> 
+           <li>
              <%= link_to "<i class='fa fa-eur'></i> Tipos de Preço".html_safe  , admin_price_types_path %>
            </li>
 
 
 
-           <li> 
+           <li>
             <%= link_to "<i class='fa fa-book'></i> Tutoriais".html_safe  , admin_academy_tutorials_path %>
           </li>
 
-           <li> 
+           <li>
              <%= link_to "<i class='fa fa-users'></i> Utilizadores".html_safe  , admin_users_path %>
            </li>
 
-           <li> 
+           <li>
              <%= link_to "<i class='fa fa-square'></i> Workshops".html_safe  , admin_academy_workshops_path %>
            </li>
 
