--- a/app/views/ratings/index.html.erb
+++ b/app/views/ratings/index.html.erb
@@ -1,6 +1,6 @@
 <ol class="breadcrumb" id="breadcrumbAds">
   <li class="active">
-    <a class="url" href="<%= ratings_path %>"><i class="fa fa-tags"></i> Avaliações</a>
+    <a class="url" href="<%= ratings_path %>"><i class="fa fa-shopping-cart"></i> Avaliações</a>
   </li>
 </ol>
 
