--- a/app/views/ads/index.html.erb
+++ b/app/views/ads/index.html.erb
@@ -9,7 +9,7 @@
 
  <ol class="breadcrumb" id="breadcrumbAds" style="border: 1px solid #dddddd;">
     <li class="active">
-      <i class="fa fa-tags"></i> <a href="<%= ads_path %>" class="url"> Anúncios</a>
+      <i class="fa fa-shopping-cart"></i> <a href="<%= ads_path %>" class="url"> Anúncios</a>
     </li>
     <% if user_signed_in? %>
       <%= link_to "<i class='fa fa-plus'></i>Novo Anúncio".html_safe, new_ad_path, class:"url", style:"float:right" %>
