--- a/app/views/layouts/_header_academy_notification.html.erb
+++ b/app/views/layouts/_header_academy_notification.html.erb
@@ -12,7 +12,13 @@
 
 <%# notifications new answers for your questions %>
     <% if @notifications_new_answer.length > 0 %>
-      <li class="dropdown-header"><%= @notifications_new_answer.length %> Novas Respostas</li>
+      <li class="dropdown-header">
+        <% if @notifications_new_answer.length == 1 %>
+          <%= @notifications_new_answer.length %> Nova Resposta
+        <% else %>
+          <%= @notifications_new_answer.length %> Novas Respostas
+        <% end %>
+      </li>
       <% @notifications_new_answer.each do |notification| %>
         <% question = notification.question %>
         <li class="preview">
@@ -28,7 +34,13 @@
 
 <%# new registration in your workshop %>
     <% if @notification_acmy_new_registration.length > 0 %>
-      <li class="dropdown-header"><%= @notification_acmy_new_registration.length %> Novas Inscrições</li>
+      <li class="dropdown-header">
+        <% if @notification_acmy_new_registration.length == 1 %>
+          <%= @notification_acmy_new_registration.length %> Nova Inscrição
+        <% else %>
+          <%= @notification_acmy_new_registration.length %> Novas Inscrições
+        <% end %>
+      </li>
       <% @notification_acmy_new_registration.each do |notification| %>
         <% workshop = notification.workshop %>
         <li class="preview">
@@ -44,7 +56,13 @@
 
 <%#  aproved tutorial  %>
     <% if @notification_acmy_tutorial_aproved.length > 0 %>
-      <li class="dropdown-header"><%= @notification_acmy_tutorial_aproved.length %> Tutoriais Aprovados</li>
+      <li class="dropdown-header">
+        <% if @notification_acmy_tutorial_aproved.length == 1 %>
+          <%= @notification_acmy_tutorial_aproved.length %> Tutorial Aprovado
+        <% else %>
+          <%= @notification_acmy_tutorial_aproved.length %> Tutoriais Aprovados
+        <% end %>
+      </li>
       <% @notification_acmy_tutorial_aproved.each do |notification| %>
         <% tutorial = notification.tutorial %>
         <li class="preview">
@@ -60,7 +78,13 @@
 
 <%#  aproved event  %>
     <% if @notification_acmy_event_aproved.length > 0 %>
-      <li class="dropdown-header"><%= @notification_acmy_event_aproved.length %> Eventos Aprovados</li>
+      <li class="dropdown-header">
+        <% if @notification_acmy_event_aproved.length == 1 %>
+          <%= @notification_acmy_event_aproved.length %> Evento Aprovado
+        <% else %>
+          <%= @notification_acmy_event_aproved.length %> Eventos Aprovados
+        <% end %>
+      </li>
       <% @notification_acmy_event_aproved.each do |notification| %>
         <% event = notification.event %>
         <li class="preview">
@@ -74,9 +98,15 @@
       <li class="divider"></li>
     <% end %>
 
-<%#  aproved event/workshop/tutorial  %>
+<%#  aproved workshop  %>
     <% if @notification_acmy_workshop_aproved.length > 0 %>
-      <li class="dropdown-header"><%= @notification_acmy_workshop_aproved.length %> Workshops Aprovados</li>
+      <li class="dropdown-header">
+        <% if @notification_acmy_workshop_aproved.length == 1 %>
+          <%= @notification_acmy_workshop_aproved.length %> Workshop Aprovado
+        <% else %>
+          <%= @notification_acmy_workshop_aproved.length %> Workshops Aprovados
+        <% end %>
+      </li>
       <% @notification_acmy_workshop_aproved.each do |notification| %>
         <% workshop = notification.workshop %>
         <li class="preview">
