--- a/app/views/users/myads.html.erb
+++ b/app/views/users/myads.html.erb
@@ -1,7 +1,7 @@
 
   <ol class="breadcrumb" id="breadcrumbAds" style="border: 1px solid #dddddd;">
     <li class="active">
-      <i class="fa fa-tags"></i> <a class="url" href="<%= ads_path %>">Anúncios</a> >
+      <i class="fa fa-shopping-cart"></i> <a class="url" href="<%= ads_path %>">Anúncios</a> >
     </li>
       <% if user_signed_in? %>
         <a class="url" href="<%= myads_user_path(current_user.id) %>"> Os meus anúncios</a>
@@ -17,4 +17,3 @@
       Ainda não existem anúncios. Consulte os pacotes disponíveis!
   <% end %>
 <%= will_paginate(@ads, renderer: BootstrapPagination::Rails, :previous_label => 'Anterior', :next_label => 'Seguinte') %>
-  
