--- a/app/views/feeds/index.html.erb
+++ b/app/views/feeds/index.html.erb
@@ -2,7 +2,7 @@
 	 Não existe atividade recente das pessoas que segue.
 	 Poderar seguir outros utilizadores.
 <%else%>
-	<div class="panel" id="mainFeedBox">
+	<div id="feedBox">
       <%= render "elem_feed" %>
 	</div>
 	
