--- a/app/assets/stylesheets/feed.css
+++ b/app/assets/stylesheets/feed.css
@@ -10,39 +10,22 @@ body {
   margin-left:auto;
   margin-right:auto;
   padding: 20px;
-  /*background: rgba(255, 255, 255, 0.8);
- 
-  min-width:375px;
-
-  border-style:solid;
-  border-color:#FF9900;
-  */
 
 
 }
 
-#firstRow{
+
+#element1 {
+  max-width:100%;
+  padding: 0;
   
 
 }
+#element2 {
 
+  float:left;
+  padding: 0;
 
-#element1 {float:left;
-
-width:50%;
-height:100%;
-
-}
-#element2 {padding-left : 20px;float:left;
-
-width:50%;
-height:100%;
-
-margin-left:auto;
-margin-right:auto;
-
-margin-top:auto;
-margin-bottom:auto;
 }
 
 
