[DESIGN FEATURE]CSS - Rating[Hélder Abreu]

--- a/app/assets/stylesheets/academy/tutorials.css
+++ b/app/assets/stylesheets/academy/tutorials.css
@@ -62,18 +62,18 @@
 }
 
 #tutorial-info li {
-	width: 49.8%;
 	display: inline-block;
 	vertical-align: middle;
+}
+
+#tutorial-info li:last-child {
+	float: right;
 }
 
 #category-label span {
 	vertical-align: middle;
 }
 
-#tutorial-date {
-	text-align: right;
-}
 .title-font {
 	font-size: 15px;
 }
