--- a/app/views/academy/tutorials/show.html.erb
+++ b/app/views/academy/tutorials/show.html.erb
@@ -38,7 +38,7 @@
         <div id="tutorial-title-description">
           <p>
             <ul id="tutorial-info">
-              <li>
+              <li id="tutorial-author">
                 <span>Autor: </span> <%= @academy_tutorial.user.name %>
               </li>
               <li id="tutorial-date">
