[DESIGN FEATURE]CSS - Rating[Hélder Abreu]

--- a/app/views/ratings/edit.html.erb
+++ b/app/views/ratings/edit.html.erb
@@ -1,6 +1,6 @@
 <ol class="breadcrumb" id="breadcrumbAds" style="border: 1px solid #dddddd;">
   <li class="active">
-    <i class="fa fa-comments"></i> <a class="url" href="<%= ratings_path %>">Avaliações</a>
+    <i class="fa fa-shopping-cart"></i> <a class="url" href="<%= ratings_path %>">Avaliações</a>
   </li>
 </ol>
 
