--- a/app/views/ratings/index.html.erb
+++ b/app/views/ratings/index.html.erb
@@ -1,10 +1,6 @@
 <ol class="breadcrumb" id="breadcrumbAds" style="border: 1px solid #dddddd;">
   <li class="active">
-<<<<<<< HEAD
-    <i class="fa fa-comments"></i> <a class="url" href="<%= ratings_path %>">Avaliações</a>
-=======
-    <a class="url" href="<%= ratings_path %>"><i class="fa fa-shopping-cart"></i> Avaliações</a>
->>>>>>> 106f8c720fbeda28758cf87e8573a589b877a1f0
+    <i class="fa fa-shopping-cart"><a class="url" href="<%= ratings_path %>"></i> Avaliações</a>
   </li>
 </ol>
 
