[Remove plans ROOT] comment plans

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -145,16 +145,16 @@
 
   <div id="login_body_image3" class="bgParallax" data-speed="15">
   </div>
-
+  <%#
   <div id="login_section_regist" class="teste" data-speed="10">
 
     <section id="section-regist" data-auto-size="0.6" >
 
              <div class="row">
                 <%= render "plans" %>
-              </div>    
+  <%#            </div>    
       </section>
-    </div>
+    </div> %> 
 <%= render 'layouts/footer' %>
 </body>
 </html>
