--- a/app/views/feeds/index.html.erb
+++ b/app/views/feeds/index.html.erb
@@ -1,3 +1,9 @@
+<ol class="breadcrumb" id="breadcrumbAds" style="border: 1px solid #dddddd;">
+  <li class="active">
+    <i class="fa fa-users"></i> <a href="<%= feed_path %>" class="url"> Feed</a>
+  </li>
+</ol>
+
 <% if @elem_feed.blank? %>
 	 Não existe atividade recente das pessoas que segue.
 	 Poderar seguir outros utilizadores.
