--- a/app/views/feeds/_elem_feed.html.erb
+++ b/app/views/feeds/_elem_feed.html.erb
@@ -1,17 +1,19 @@
 	 <% @elem_feed.each do | f | %>
-	 		<div class="col-md-6">
-	 			<div class="panel" id="mainFeedBox">
+	 		<div class="col-md-6" style="width:100%;">
+	 			<div class="panel" id="mainFeedBox" style="border: 1px solid #dddddd;">
 		 		
-				 	<div class="row" id="firstRow">
-					 	<%= link_to (image_tag f.content.user.avatar.url(:medium), :width => '40', :height => '40',:class => "img-circle pull-left"), f.content.user %>
-					 	<%= link_to f.content.user.name, f.content.user %>
+				 	<div class="row" id="firstRow" style="width: 100%; min-height: 40px; padding-bottom: 15px; border-bottom: 1px solid #dddddd;">
+					 	<div style="float: left; width: 50px; height: 50px; margin-right: 15px;">
+					 		<%= link_to (image_tag f.content.user.avatar.url(:medium), :width => '50', :height => '50',:class => "img-circle pull-left"), f.content.user %>
+					 	</div>
+					 	<div style="padding-top: 15px; width: auto; text-align: left;"><%= link_to f.content.user.name, f.content.user, id:"feed-link" %>
 				 	<%case f.in%>
 					<%when 1    #ad %>
-						<h5 align="left">criou o seguinte anúncio:</h5>
+						criou o seguinte anúncio:</div>
 						</div>
-						<hr>
+						
 						<% ad = f.content %>
-							<div class="row">
+							<div class="row" style="margin-top:20px; margin-bottom:-25px;">
 					    		<div class="col-md-6" id="element1">
 								    <div class="ads_index_img">
 								      <div class="thumbnail">
@@ -22,119 +24,113 @@
 								      </div>
 								    </div>
 							    </div>
-							    <div class="col-md-6" id="element2">
-								    <div class="panel-body text-center">
-								      <% if !ad.category.blank? %>
-								        <div class="caption">
-								          <% if ad.category.nil? %>
-								                  <span class="label pro_title" style="background-color: #888888">Desconhecido </span>
-								          <% else %>
-								                  <span class="label pro_title" style="background-color: #<%= ad.category.color %>"><%= ad.category.name %>  </span>
-								          <% end %>
+							    <div>
+								    <div class="panel-body text-center" style="padding:0;">
+								    	<div id="category-label" style="width:100%; text-align:right; padding-bottom:10px;">
+									        <span>Categoria: </span> 
+									        <span class="label" style="background-color: #<%= ad.category.color %> ; color: black; font-size:12px; margin-top: 20px;">
+									          <%= ad.category.name %>
+									        </span>
 								        </div>
-								      <% end %>
-								      	<div  class="linkads" style="height:50px"><a><%= link_to ad.title, ad %></a></div>
-								      <div style="height:50px"><i class="fa fa-map-marker pro_title"></i> <%= ad.city.city unless ad.city.blank? %></div>
+								      	<div class="h3 url" id="feed-link" style="height:30px; margin-top: 40px; margin-bottom: 20px;">
+								      		<%= link_to ad.title, ad, class:"h4 url" %>
+								      	</div>
+								      	<div style="height:70px; min-width: 150px;">
+								      		<span style="float:left; margin-left:40px;">
+								      			<i class="fa fa-map-marker pro_title"></i> <%= ad.city.city unless ad.city.blank? %>
+								      		</span>
+								      		<span style="float:right; margin-right:40px;">
+								      			<i class="fa fa-eur pro_title"></i> <%= ad.price %>
+								      		</span>
+								      	</div>
 								    </div>
 								</div>
 							</div>
 
 					<%when 2    #question%>
-						<h5 align="left">colocou a seguinte questão:</h5>
+						colocou a seguinte questão:</div>
 						</div>
-						<hr>
+						
 						<% question = f.content %>
-						<div class="row">
-							<div id="category-label" style="float:right">
-						        <span>Categoria: </span> 
-						        <span class="label" style="background-color: #<%= question.category.color %> ; color: black; font-size:12px;">
-						          <%= question.category.name %>
-						        </span>
-					        </div>
-					        <h2 align="left"> <%= link_to question.title, question, class:"h2 url" %> </h2>
-					    </div>
+						<div>
+							<div style="min-height:40px; width:100%; display: inline-block; margin:15px 0 15px 0;">
+								<div id="category-label" style="float: right; min-width: 200px; text-align: right; padding-top: 5px; padding-bottom:10px;">
+							        <span>Categoria: </span> 
+							        <span class="label" style="background-color: #<%= question.category.color %> ; color: black; font-size:12px; margin-top: 20px;">
+							          <%= question.category.name %>
+							        </span>
+						        </div>
+						        <%= link_to question.title, question, class:"h2 url",  id:"feed-link" %>
+						    </div>
 
-
-					    <div class="col-xs-9 col-md-10 ">
-					        <%= question.text.html_safe %><%##  texto da pergunta  ##%>
+						    <div style="width: 100%; text-align: justify;">
+						        <%= question.text.html_safe %><%##  texto da pergunta  ##%>
+						    </div>
 					    </div>
-					    <br>
 
 					<%when 3    #tutorial%>
-						<h5 align="left">têm o seguinte tutorial aprovado:</h5>
+						criou o seguinte tutorial:</div>
 						</div>
-						<hr>
+						
 						<% tutorial = f.content %>
-						 <div id="category-label" style="float:left; width:30%; text-align:left;">
-					        <span>Categoria: </span> 
-					        <span class="label" style="background-color: #<%= tutorial.category.color %> ; color: black; font-size:12px;">
-					          <%= tutorial.category.name %>
-					        </span>
-					    </div>
-					    <br>
-					     <h2 align="left" > 
-					     <%= link_to tutorial.title, tutorial, class:"h2 url" %>
-					    </h2>
-					    <br>
-					    <div class="information_show_tutorial">
-					    	<p>
-				          	  <span>Descrição: </span> <%= tutorial.rapid_description %>
-				            </p>
-					    </div>
-
-					    <br>
-					    <br>
+						<div>
+							<div style="min-height:40px; width:100%; display: inline-block; margin:15px 0 15px 0;">
+								<div id="category-label" style="float: right; min-width: 200px; text-align: right; padding-top: 5px; padding-bottom:10px;">
+								    <span>Categoria: </span> 
+								    <span class="label" style="background-color: #<%= tutorial.category.color %> ; color: black; font-size:12px; margin-top: 20px;">
+						  	            <%= tutorial.category.name %>
+								    </span>
+							    </div>
+							    <%= link_to tutorial.title, tutorial, class:"h2 url",  id:"feed-link" %>
+							</div>
+							<div style="width: 100%; text-align: justify;">
+							    <%= tutorial.rapid_description %><%##  texto da pergunta  ##%>
+							</div>
+						</div>
 
 
 					<%when 4    #event%>
-						<h5 align="left">divulgou o seguinte evento:</h5>
+						criou o seguinte evento:</div>
 						</div>
-						<hr>
+						
 						<% event = f.content %>
-						<div class="event-box_feed"><!--class="col-md-6">-->
-					        <div class="well well-sm">
-					          <div class="row" style="height:100%;">
-					            <div class="col-xs-3 col-md-3 text-center" id="event-image">
-					            <%= link_to event_image( event.image ), event ,:class=>"img-rounded img-responsive" %>
-					            </div>
+						<div class="event-box_feed">
+					          	<div class="row">
+					            	<div class="col-xs-3 col-md-3 text-center" id="event-image" style="margin-top: 10px;">
+					            		<%= link_to event_image( event.image ), event ,:class=>"img-rounded img-responsive" %>
+					            	</div>
+					            	<div class="col-xs-9 col-md-9 section-box_feed">
+						              	<div style="margin-top: 15px;">
+						                  	<%= link_to event.title, event, class:"h2 url",  id:"feed-link" %>
+						              	</div>
 
-					            <div class="col-xs-9 col-md-9 section-box_feed">
-					              
-					              <div id="event-title">
-					                  <%= link_to event.title, event, class:"h2 url" %>
-					              </div>
-
-					              <div id="event-description">
-					                  <p><%= event.description %></p>
-					              </div>
-
-					              <hr>
-					              
-					              <div class="row rating-desc">
-					                <div class="col-md-12">
-					                  <div style="float:left">
-					                    <i class="fa fa-map-marker"></i><%= event.city.city %>
-					                  </div>
-					                  <div style="float:right">
-					                    <span class="event-begin">
-					                      <span class="fa fa-calendar" style="color:darkgreen;"></span><%=event.start_day.day %>/<%=event.start_day.mon %>/<%=event.start_day.year %>
-					                    </span>
-					                    <span>
-					                      <span class="fa fa-calendar" style="color:#d43f3a"></span><%=event.end_day.day %>/<%=event.end_day.mon %>/<%=event.end_day.year %>
-					                    </span>
-					                  </div>
-					                </div>
-					              </div>
-
-					            </div>
-					          </div>
-					        </div>
-					      </div>
+						              	<div id="event-description" style="border-bottom: 1px solid #dddddd; padding-bottom: 10px; text-align: justify;">
+						                  	<%= event.description %>
+						              	</div>
+						              
+						              	<div class="row rating-desc">
+						                	<div class="col-md-12">
+						                  		<div style="float:left">
+						                    		<i class="fa fa-map-marker"></i><%= event.city.city %>
+						                  		</div>
+							                  	<div style="float:right">
+							                    	<span class="event-begin">
+							                      		<span class="fa fa-calendar" style="color:darkgreen;"></span><%=event.start_day.day %>/<%=event.start_day.mon %>/<%=event.start_day.year %>
+							                    	</span>
+							                    	<span>
+							                      		<span class="fa fa-calendar" style="color:#d43f3a"></span><%=event.end_day.day %>/<%=event.end_day.mon %>/<%=event.end_day.year %>
+							                    	</span>
+							                  	</div>
+						                	</div>
+						              	</div>
+						        	</div>
+					    		</div>
+					    </div>
 
 					<%when 5    #WS%>
-						<h5 align="left">irá realizar o seguinte workshop:</h5>
+						irá realizar o seguinte workshop</div>
 						</div>
-						<hr>
+						
 						<% workshop = f.content %>
 						<br>
 					    <div class="title_show_workshop">
