--- a/app/assets/stylesheets/theme.css
+++ b/app/assets/stylesheets/theme.css
@@ -563,13 +563,17 @@ border-color: #eff2f7;
 
 
 /******AUTOCOMPLETE**********/
- .typeahead { z-index :1051;}
-.typeahead_wrapper { display: block; height: 30px; z-index:9999; }
+.typeahead { z-index :1051;width: 400px;  }
+.typeahead_wrapper { display: block; height: 50px; z-index:9999; }
 .typeahead_photo { float: left; max-width: 40px; max-height: 40px; margin-right: 5px; }
 .typeahead_labels { float: left; height: 30px; }
-.typeahead_primary { font-weight: bold;z-index:9999; }
-.typeahead_secondary { font-size: .8em; margin-top: -5px; }
+.typeahead_primary { font-weight: bold;z-index:9999; padding:4px;}
+.typeahead_secondary { font-size: .9em; margin-top: -5px; padding:0px; }
+.typeahead_typo{ color: green; }
 
+#search_query {  
+  border-radius:5px;
+}
 
 /***** EVENTO LIST ****************/
 .fa { margin-right:5px;}
