[DESIGN FEATURE]CSS - Footer[Hélder Abreu]

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,5 +1,5 @@
  
-<aside class="profile-info col-lg-9">
+<aside class="profile-info col-lg-9" style="margin-bottom: 40px;">
     <!--<section class="panel" style="margin-right:15px;">
         <form>
           <textarea placeholder="Em que estás a pensar?" rows="2" class="form-control input-lg p-text-area"></textarea>
