--- a/app/views/ads/_ad.html.erb
+++ b/app/views/ads/_ad.html.erb
@@ -8,18 +8,22 @@
           </div>
       </div>
     </div>
-    <div class="panel-body text-center">
+    <div class="panel-body text-center" style="margin-top:-30px; min-width: 105px !important;">
       <% if !ad.category.blank? %>
-        <div class="caption">
+        <div class="caption" style="margin-bottom:15px;">
           <% if ad.category.nil? %>
             <span class="label pro_title" style="background-color: #888888">Desconhecido </span>
           <% else %>
-            <span class="label pro_title" style="background-color: #<%= ad.category.color %>"><%= ad.category.name %>  </span>
+            <span class="label pro_title" style="background-color: #<%= ad.category.color %>;"><%= ad.category.name %>  </span>
           <% end %>
         </div>
       <% end %>
-      <div class="linkads" style="height:50px"><a><%= link_to ad.title, ad %></a></div>
-      <div style="height:50px"><i class="fa fa-map-marker pro_title"></i> <%= ad.city.city unless ad.city.blank? %></div>
+      <div class="linkads" style="height:20px; margin-bottom: 10px;">
+        <a><%= link_to ad.title, ad %></a>
+      </div>
+      <div>
+        <i style="height:20px; margin-bottom:15px; margin-top:15px;" class="fa fa-map-marker pro_title"></i> <%= ad.city.city unless ad.city.blank? %>
+      </div>
     </div>
   </div>
 </div>
