--- a/app/views/ads/show.html.erb
+++ b/app/views/ads/show.html.erb
@@ -123,7 +123,7 @@
           </div>
         </div>
         <div style="display:inline-block; width:100%; vertical-align:middle;">
-          <div style="float:left; max-width:250px;">
+          <div style="float:left; max-width:100%;">
             <h4 class="ads_title">
               <%= @ad.title %>
             </h4>
