--- a/app/views/layouts/_sidebar_left.html.erb
+++ b/app/views/layouts/_sidebar_left.html.erb
@@ -1,31 +1,26 @@
 <div class="panel-group" id="accordion" style="margin-bottom: 10px;">
 
   <% if user_signed_in? %>
+
     <div class="panel panel-info">
       <div class="panel-heading" style="background-color: #39b3d7">
         <h4 class="panel-title">
-          <a href= <%= user_path(current_user) %> >
-            <%= fa_icon "shopping-cart", class:"market-icon" %> Perfil
+          <a data-toggle="collapse" data-parent="#accordion" href="#collapseUser">
+            <%= fa_icon "shopping-cart", class:"market-icon" %> <%= current_user.name %>
           </a>
         </h4>
       </div>
-    </div>
-  <% end %>
-
-
-  <% if user_signed_in? %>
-    <div class="panel panel-info">
-      <div class="panel-heading" style="background-color: #39b3d7">
-        <h4 class="panel-title">
-          <a href= <%= feed_path %> >
-            <%= fa_icon "shopping-cart", class:"market-icon" %> Feed
-          </a>
-        </h4>
+      <div id="collapseUser" class="panel-collapse collapse %>">
+        <div class="panel-body">
+          <ul class="side-elems">
+            <li><%= link_to "<i class='fa fa-angle-right'></i>Perfil".html_safe , user_path(current_user
+            ) %></li>
+            <li><%= link_to "<i class='fa fa-angle-right'></i>Feed".html_safe , feed_path %></li>
+          </ul>
+        </div>
       </div>
     </div>
   <% end %>
-
-
 
 
   <!-- MERCADO -->
