[DESIGN FEATURE]CSS - Search bar - Sidebar[Hélder Abreu]

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,13 +1,13 @@
-<footer style="padding-left:0; position:fixed;">
+<footer style="position:fixed;">
   <div style="width:100%; display:inline-block;">
-    <div style="float:left; min-width:350px;">
+    <div style="float:left; min-width:375px;">
       <ul id='footer-info'>
         <li><a href="#">Termos e Condições</a></li>
         <li><a href="#">Privacidade</a></li>
         <li><a href="#">Contactos</a></li>
       </ul>
     </div>
-    <div style="float:right; min-width:350px; text-align:center;">
+    <div style="float:right; min-width:375px; text-align:center;">
       <p style="color:white">© <%= Time.now.year %> AGROSOCIAL. Todos os direitos reservados.</p>
     </div>
   </div>
