--- a/app/views/layouts/_sidebar_left.html.erb
+++ b/app/views/layouts/_sidebar_left.html.erb
@@ -127,7 +127,7 @@
 
 <% if user_signed_in? && (controller_name=="ads" || academy?) %>
 <!-- Painel de Filtros-->
-<div class="panel ">
+<div class="panel " style="border: 1px solid #dddddd;">
   <div class="panel-heading border-header">
     <i class="icon-search"></i><span style="font-size:13px;margin-left:5px">Pesquisar por:</span>
   </div>
