--- a/app/assets/stylesheets/theme.css
+++ b/app/assets/stylesheets/theme.css
@@ -136,14 +136,12 @@ a:hover #dropCarret{
 
 /****FOOTER****/
 footer {
-
-  padding-top:10px;
+  position: relative;
+  padding-top: 10px;
   background-color: #00A75D;
   bottom: 0px;
-  position: relative;
   width: 100%;
   color: #fff;
-  padding-left: 200px;
   clear: both;
 }
 
@@ -272,6 +270,10 @@ background-color: #16ab84;
 .sidebar-nav > .sidebar-brand a:hover {
   color: #fff;
   background: none;
+}
+
+#search-bar-ads select {
+  border-radius: 3px;
 }
 
 .content-header {
