[DESIGN FEATURE]CSS - Sidebar - Utilizador[Hélder Abreu]

--- a/app/views/feeds/index.html.erb
+++ b/app/views/feeds/index.html.erb
@@ -1,6 +1,6 @@
 <ol class="breadcrumb" id="breadcrumbAds" style="border: 1px solid #dddddd;">
   <li class="active">
-    <i class="fa fa-users"></i> <a href="<%= feed_path %>" class="url"> Feed</a>
+    <i class="fa fa-users"></i> <a href="<%= feed_path %>" class="url"> Mural</a>
   </li>
 </ol>
 
