--- a/app/views/layouts/_header_user_menu.html.erb
+++ b/app/views/layouts/_header_user_menu.html.erb
@@ -2,7 +2,7 @@
 <li class="dropdown">
   <a href="#" class="dropdown-toggle" style="padding-top:9px; padding-bottom:9px;" data-toggle="dropdown" >
     <!--<% image_tag current_user.avatar.url%>-->
-    <span><%= image_tag current_user.avatar.url(:medium), style:"height:35px; " %>
+    <span><%= image_tag current_user.avatar.url(:medium), style:"height:35px; border-radius: 3px;" %>
       <% if @notification_messages.size > 0 %>
         <span class="badge" id="custom-badge">1</span>
       <% end %>
