--- a/app/views/academy/workshops/show.html.erb
+++ b/app/views/academy/workshops/show.html.erb
@@ -1,3 +1,10 @@
+<% if flash[:notice] %>
+  <script> showNotify("<%= flash[:notice] %>","success") </script>
+<% end %>
+<% if flash[:error] %>
+  <script> showNotify("<%= flash[:error] %>","error") </script>
+<% end %>
+
 <ol class="breadcrumb" id="breadcrumbAds" style="border: 1px solid #dddddd;">
   <li class="active">
     <i class="fa fa-book"></i> Academia</li> >
