--- a/app/views/feeds/index.js.erb
+++ b/app/views/feeds/index.js.erb
@@ -1,5 +1,5 @@
 
-$('#mainFeedBox').append('<%= escape_javascript(render partial: "elem_feed") %>');
+$('#feedBox').append('<%= escape_javascript(render partial: "elem_feed") %>');
 
 <% if @feeds.next_page %> 
   $('div.load-more-feeds').attr('href', '<%= feed_path page: @feeds.next_page %>');
