--- a/app/views/academy/answers/_form_aux.html.erb
+++ b/app/views/academy/answers/_form_aux.html.erb
@@ -14,8 +14,12 @@
 
 <%##  Avatar do user  ##%>
 <div class="col-xs-2 col-md-2" id="user-avatar">
-  <%=link_to image_tag(current_user.avatar.url(:medium),:width => "70%",:class => "img-circle"), current_user %>
-  <span style="float:center;"><%= current_user.name %></span>
+  <div>
+    <%=link_to image_tag(current_user.avatar.url(:medium),:width => "70%",:class => "img-circle"), current_user %>
+  </div>
+  <div style="float:center;">
+    <%= current_user.name %>
+  </div>
 </div>
 
 <div class="col-xs-10 col-md-10">
