--- a/app/views/academy/questions/show.html.erb
+++ b/app/views/academy/questions/show.html.erb
@@ -5,7 +5,7 @@
 <%# Verifica se existe uma melhor resposta %>
 <% if @best_answer != nil %>
 <div class="col-lg-12" style="padding-left: 30px !important; padding-right: 0px !important;">
-  <section class="panel panel-success">
+  <section class="panel panel-success" style="min-width:300px;">
     <header class="panel-heading" style="border-color: #dddddd !important;">
       <%= '<i class="fa fa-star"></i> Melhor Reposta'.html_safe %>
       <div class="pull-right">
@@ -15,8 +15,12 @@
     </header>
     <div class="panel-body" id="panel-question">
       <div class="col-xs-2 col-md-2" id="user-avatar"><%##  Avatar do user que respondeu  ##%>
-        <%=link_to image_tag(@best_answer.user.avatar.url(:medium),:width => "70%",:class => "img-circle"), @best_answer.user %>
-        <span style="float:center;"><%= @best_answer.user.name %></span>
+        <div>
+          <%=link_to image_tag(@best_answer.user.avatar.url(:medium),:width => "70%",:class => "img-circle"), @best_answer.user %>
+        </div>
+        <div style="float:center;">
+          <%= @best_answer.user.name %>
+        </div>
       </div>
 
       <div class="col-xs-9 col-md-10 "><%##  texto da resposta  ##%>
