--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -2,9 +2,12 @@
 
   <!-- Brand and toggle get grouped for better mobile display -->
   <div class="navbar-header" id="header-bar">
-    <a href="/"><img id="agrosocial_logo" src="/assets/logo_button.svg" alt="AgroSocial Logo" class="img-circle"></a>
-    <a class="navbar-brand" id="brandAgro" href="/">AgroSocial</a>
+    <a href="<% if user_signed_in? %> <%= feed_path %> <% else %> <%= ads_path %> <% end %>
+"><img id="agrosocial_logo" src="/assets/logo_button.svg" alt="AgroSocial Logo" class="img-circle"></a>
+    <a class="navbar-brand" id="brandAgro" href="<% if user_signed_in? %> <%= feed_path %> <% else %> <%= ads_path %> <% end %>
+">AgroSocial</a>
   </div>
+
 
   <button type="button" id="navbarToggle" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
     <span class="sr-only">Toggle navigation</span>
