--- a/app/views/ratings/index.html.erb
+++ b/app/views/ratings/index.html.erb
@@ -11,7 +11,7 @@
 <div style="display: inline-block; width: 100%; margin: 0 10px 0 10px">
     <div class="row lead" style="margin: 0 0 50px 0;">
 		<span style="position: absolute; left: 40px; font-size: 30px; vertical-align: middle;">
-			<%= @myrate.to_f %>
+			<%= @myrate.round(1).to_f %>
 		</span>
         <% (1..(@myrate.to_i)).each do |i| %>
 	        <span class="icon_rating" style="left: <%= i*30 %>px"></span>
