[DESIGN FEATURE]CSS - Sidebar Utilizador Nao Registado[Hélder Abreu]

--- a/app/views/layouts/_sidebar_left.html.erb
+++ b/app/views/layouts/_sidebar_left.html.erb
@@ -46,7 +46,7 @@
     <div class="panel panel-info">
       <div class="panel-heading" style="background-color: #7ECF7E"><!--style="background-color: #39b3d7">-->
         <h4 class="panel-title">
-          <%= link_to "MERCADO".html_safe, ads_path %>
+          <%= fa_icon "shopping-cart", class:"market-icon" %><%= link_to " MERCADO".html_safe, ads_path %>
         </h4>
       </div>
     </div>
@@ -78,7 +78,7 @@
     <div class="panel panel-default">
       <div class="panel-heading" style="background-color: #A1D6A1"><!--style="background-color: #ed9c28">-->
         <h4 class="panel-title">
-          <%= link_to "EVENTOS".html_safe, ads_path %>
+          <%= fa_icon "calendar" %><%= link_to " EVENTOS".html_safe, event_events_path %>
         </h4>
       </div>
     </div>
