--- a/app/views/event/events/show.html.erb
+++ b/app/views/event/events/show.html.erb
@@ -74,10 +74,10 @@
         </div>
         <div style="float:right">
           <span class="event-begin">
-            <span class="fa fa-calendar" style="color:darkgreen;"></span><%= (@event_event.start_day + 1.week).strftime("%d - %m - %Y") %>
+            <span class="fa fa-calendar" style="color:darkgreen;"></span><%= (@event_event.start_day).strftime("%d - %m - %Y") %>
           </span>
           <span>
-            <span class="fa fa-calendar" style="color:#d43f3a"></span><%= (@event_event.end_day + 1.week).strftime("%d - %m - %Y") %>
+            <span class="fa fa-calendar" style="color:#d43f3a"></span><%= (@event_event.end_day).strftime("%d - %m - %Y") %>
           </span>
         </div>
       </div>
